--- a/mypy.ini
+++ b/mypy.ini
@@ -8,6 +8,6 @@ warn_return_any = True
 warn_unused_configs = True
 show_error_codes = True
 [mypy.plugins.django-stubs]
-django_settings_module=cobra.settings
+django_settings_module=cobra.cobra.settings
 [mypy-*.migrations.*]
 ignore_errors = True
