--- a/mypy.ini
+++ b/mypy.ini
@@ -11,3 +11,5 @@ show_error_codes = True
 django_settings_module=cobra.cobra.settings
 [mypy-*.migrations.*]
 ignore_errors = True
+[mypy-*.settings.*]
+ignore_errors = True
