Add celery and rabbitmq

--- a/cobra/docker/Dockerfile
+++ b/cobra/docker/Dockerfile
@@ -12,14 +12,25 @@ COPY --chown=cobra [ \
 COPY --chown=cobra ./docker/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 RUN --mount=type=cache,target=/root/.cache/pip \
-     pip install -r /tmp/base.txt
-
+    pip install --upgrade pip && \
+    pip install -r /tmp/base.txt
 
 FROM builder as dev
 
 ENV DEBUG 1
+ENV DJANGO_SETTINGS_MODEULE 'cobra.settings.dev'
+
 RUN --mount=type=cache,target=/root/.cache/pip \
      pip install -r /tmp/dev.txt
 WORKDIR /code
+
+
+FROM dev as cobra-dev
+
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["run_dev"]
+CMD ["run_cobra_dev"]
+
+FROM dev as celery-dev
+
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["run_celery_dev"]
