--- a/cobra/docker/docker-compose.base.yml
+++ b/cobra/docker/docker-compose.base.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  app:
+  app: &app
     restart: always
     networks:
       - cobranet
@@ -15,6 +15,9 @@ services:
       options:
         max-size: "1024k"
         max-file: "5"
+
+  celery:
+    <<: *app
 
 networks:
   cobranet:
