--- a/cobra/docker/docker-compose.base.yml
+++ b/cobra/docker/docker-compose.base.yml
@@ -8,6 +8,7 @@ services:
     env_file:
       - ../.env/db.env # configure postgres
       - ../.env/app.env # configure application
+      - ../.env/rabbitmq.env
     volumes:
       - ..:/code
     logging:
