Add user email migration and jwt views

--- a/mypy.ini
+++ b/mypy.ini
@@ -8,7 +8,7 @@ warn_return_any = True
 warn_unused_configs = True
 show_error_codes = True
 [mypy.plugins.django-stubs]
-django_settings_module=cobra.cobra.settings
+django_settings_module=cobra.cobra.settings.dev
 [mypy-*.migrations.*]
 ignore_errors = True
 [mypy-*.settings.*]
