--- a/.isort.cfg
+++ b/.isort.cfg
@@ -2,4 +2,6 @@
 profile = black
 src_paths = .
 multi_line_output=3
-line_length = 120
+include_trailing_comma = True
+use_parentheses = True
+known_third_party = django
