Finish password reset endpoints and swagger fixes

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,7 @@
 [mypy]
-plugins = mypy_django_plugin.main
+plugins =
+    mypy_django_plugin.main,
+    mypy_drf_plugin.main
 ignore_missing_imports = True
 no_implicit_optional = True
 warn_redundant_casts = True
