--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,6 +19,7 @@ repos:
         additional_dependencies: [
             'flake8-comprehensions==3.5.0',
             'flake8-debugger==4.0.0',
+            'flake8-django==1.1.2'
         ]
         args: ["--config=.flake8"]
   - repo: https://github.com/PyCQA/isort
