--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,16 +23,16 @@ repos:
         ]
         args: ["--config=.flake8"]
   - repo: https://github.com/PyCQA/isort
-    rev: 5.10.0
+    rev: 5.10.1
     hooks:
       - id: isort
         args: ["--settings-file=.isort.cfg"]
   - repo: https://github.com/ambv/black
-    rev: 21.10b0
+    rev: 21.12b0
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.910-1
+    rev: v0.930
     hooks:
       - id: mypy
         entry: ./mypy_init.sh
