--- a/cobra/requirements/base.in
+++ b/cobra/requirements/base.in
@@ -3,6 +3,8 @@ djangorestframework
 psycopg2
 django-jazzmin
 djangorestframework_simplejwt
+drf-flex-fields
+django-filter
 djoser
 drf-yasg
 celery
